# rust-sdk

./: Cargo.toml
src/: client.rs  errors.rs  lib.rs  models.rs
tests/: client_test.rs
